# OXCLIProxyAPI

rust/cliproxy-data-plane/: Cargo.toml  Makefile  README.md
rust/cliproxy-data-plane/crates/common-types/: Cargo.toml
rust/cliproxy-data-plane/crates/common-types/src/: lib.rs
rust/cliproxy-data-plane/crates/runtime-config-client/: Cargo.toml
rust/cliproxy-data-plane/crates/runtime-config-client/src/: lib.rs
rust/cliproxy-data-plane/crates/upstream-runtime/: Cargo.toml
rust/cliproxy-data-plane/crates/upstream-runtime/src/: lib.rs
rust/cliproxy-data-plane/docs/: 01-CPA管理平面与数据平面设计.md  02-CPA Rust数据平面迁移任务安排.md  03-CPA Runtime Snapshot契约.md  04-CPA Rust Sidecar启动与健康状态说明.md  05-CPA与Data Plane通信矩阵.md
rust/cliproxy-data-plane/examples/: runtime-snapshot.example.json
rust/cliproxy-data-plane/src/: app.rs  config.rs  http.rs  lib.rs  main.rs  responses.rs  runtime.rs
