[package]
name = "cliproxy-data-plane"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/common-types",
    "crates/runtime-config-client",
]
resolver = "3"

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
cliproxy-common-types = { path = "crates/common-types" }
cliproxy-runtime-config-client = { path = "crates/runtime-config-client" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
