[package]
name = "cliproxy-runtime-config-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
cliproxy-common-types = { path = "../common-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["fs"] }

[dev-dependencies]
tempfile = "3.20"
