[package]
name = "cliproxy-upstream-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.11"
cliproxy-common-types = { path = "../common-types" }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
axum = "0.8"
http-body-util = "0.1"
serde_json = "1.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "net"] }
